--- a/ReignsMultimedia-Memo/MainWindow.xaml
+++ b/ReignsMultimedia-Memo/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReignsMultimedia_Memo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="750" Width="400">
     <Grid>
-        
+        <StackPanel Name="panelBase" Opacity="1"/>
     </Grid>
 </Window>
