--- a/ReignsMultimedia-Memo/MainWindow.xaml
+++ b/ReignsMultimedia-Memo/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReignsMultimedia_Memo"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="MainWindow" Height="750" Width="400">
-    <Grid>
-        <StackPanel Name="panelBase" Opacity="0"/>
+    <Grid Background="#060417">
+        <StackPanel Name="panelBase" Opacity="0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
     </Grid>
 </Window>
