--- a/ReignsMultimedia-Memo/MainMenu.xaml
+++ b/ReignsMultimedia-Memo/MainMenu.xaml
@@ -5,10 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ReignsMultimedia_Memo"
              mc:Ignorable="d" 
-             d:DesignHeight="750" d:DesignWidth="400">
+             d:DesignHeight="750" d:DesignWidth="400" VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
     <Grid>
-        <Image Grid.Column="0" Source="Assets/Splashes/menuSplash.png"/>
-        <Button FontFamily="/ReignsMultimedia-Memo;component/Assets/Font/#OCR A Std" Margin="35,468,35,218" FontSize="24" IsDefault="True" Width="330" Height="64">INICIAR</Button>
-        <Button FontFamily="/ReignsMultimedia-Memo;component/Assets/Font/#OCR A Std" Margin="35,556,35,130" FontSize="24" IsDefault="False" Width="330" Height="64">SALIR</Button>
+        <Image Source="Assets/Splashes/menuSplash.png" ClipToBounds="True" Stretch="UniformToFill" />
+        <Button FontFamily="/ReignsMultimedia-Memo;component/Assets/Font/#OCR A Std" Margin="35,468,35,218" FontSize="24" IsDefault="True" Width="330" Height="64" Background="#FFB4B0AF">INICIAR</Button>
+        <Button FontFamily="/ReignsMultimedia-Memo;component/Assets/Font/#OCR A Std" Margin="35,556,35,130" FontSize="24" IsDefault="False" Width="330" Height="64" Background="#FFB4B0AF">SALIR</Button>
     </Grid>
 </UserControl>
