--- a/ReignsMultimedia-Memo/MainWindow.xaml
+++ b/ReignsMultimedia-Memo/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ReignsMultimedia_Memo"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="MainWindow" Height="750" Width="400">
+        Title="Reigns Multimedia: Memo" Height="750" Width="400">
     <Grid Background="#060417">
         <StackPanel Name="panelBase" Opacity="0" VerticalAlignment="Top"/>
     </Grid>
