--- a/ReignsMultimedia-Memo/GameplayWindow.xaml
+++ b/ReignsMultimedia-Memo/GameplayWindow.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="750" d:DesignWidth="400">
     <Grid>
-        <StackPanel Name="PanelStats" Width="400" Height="123" VerticalAlignment="Top" ></StackPanel>        
+        <StackPanel Name="PanelStats" Width="400" Height="123" VerticalAlignment="Top" ></StackPanel>
+        <StackPanel Name="PanelEvent" Width="400" Height="627" VerticalAlignment="Top" Margin="0,123,0,0" ></StackPanel>
     </Grid>
 </UserControl>
