--- a/ReignsMultimedia-Memo/GameplayWindow.xaml
+++ b/ReignsMultimedia-Memo/GameplayWindow.xaml
@@ -8,6 +8,6 @@
              d:DesignHeight="750" d:DesignWidth="400">
     <Grid>
         <StackPanel Name="PanelStats" Width="400" Height="82" VerticalAlignment="Top" ></StackPanel>
-        <StackPanel Name="PanelEvent" Width="400" Height="663" VerticalAlignment="Top" Margin="0,87,0,0" ></StackPanel>
+        <StackPanel Name="PanelEvent" Width="400" Height="663" VerticalAlignment="Top" Margin="0,87,0,0" HorizontalAlignment="Center" ></StackPanel>
     </Grid>
 </UserControl>
