--- a/ReignsMultimedia-Memo/MinigamePanel.xaml
+++ b/ReignsMultimedia-Memo/MinigamePanel.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="700" d:DesignWidth="400">
     <Grid Background="White">
 
-        <Canvas Name="Canvas1" KeyDown="Canvas1_KeyDown" Focusable="True" VerticalAlignment="Top" HorizontalAlignment="Left" >
+        <Canvas Name="Canvas1" KeyDown="Canvas1_KeyDown" Focusable="True" >
             <Image Name="MemoMG" Source="Assets/Minigame/Memo.png" Width="50" Canvas.Left="180" Canvas.Top="0"></Image>
             <Image Name="Alumno1MG" Source="Assets/Minigame/alumno1.png" Width="37" Canvas.Left="0" Canvas.Top="500"></Image>
             <Image Name="Alumno2MG" Source="Assets/Minigame/alumno2.png" Width="37" Canvas.Left="0" Canvas.Top="130"></Image>
@@ -17,7 +17,8 @@
             <Image Name="Alumno5MG" Source="Assets/Minigame/alumno5.png" Width="37" Canvas.Left="350" Canvas.Top="500"></Image>
             <Image Name="Alumno6MG" Source="Assets/Minigame/alumno6.png" Width="37" Canvas.Left="350" Canvas.Top="130"></Image>
             <Image Name="CarroMG" Source="Assets/Minigame/carro.png" Width="190" Canvas.Left="120" Canvas.Top="620"></Image>
+            <TextBlock Name="lblWarning"  HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/ReignsMultimedia-Memo;component/Assets/Font/#OCR A Std" FontSize="36" TextWrapping="Wrap" TextAlignment="Center" FontWeight="Bold" Opacity="1" Width="387" Canvas.Top="217">¡Estás estresado! Escapa de tus alumnos</TextBlock>
         </Canvas>
-        <TextBlock Name="lblWarning"  HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/ReignsMultimedia-Memo;component/Assets/Font/#OCR A Std" FontSize="36" TextWrapping="Wrap" TextAlignment="Center" FontWeight="Bold" Opacity="1">¡Estás estresado! Escapa de tus alumnos</TextBlock>
+        
     </Grid>
 </UserControl>
