--- a/ReignsMultimedia-Memo/MinigamePanel.xaml
+++ b/ReignsMultimedia-Memo/MinigamePanel.xaml
@@ -6,9 +6,9 @@
              xmlns:local="clr-namespace:ReignsMultimedia_Memo"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="400">
-    <Grid Background="White">
+    <Grid>
 
-        <Canvas Name="Canvas1" KeyDown="Canvas1_KeyDown" Focusable="True" >
+        <Canvas Name="Canvas1" KeyDown="Canvas1_KeyDown" Focusable="True" Background="White">
             <Image Name="MemoMG" Source="Assets/Minigame/Memo.png" Width="50" Canvas.Left="180" Canvas.Top="0"></Image>
             <Image Name="Alumno1MG" Source="Assets/Minigame/alumno1.png" Width="37" Canvas.Left="0" Canvas.Top="500"></Image>
             <Image Name="Alumno2MG" Source="Assets/Minigame/alumno2.png" Width="37" Canvas.Left="0" Canvas.Top="130"></Image>
