--- a/ReignsMultimedia-Memo/MainWindow.xaml
+++ b/ReignsMultimedia-Memo/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Title="Reigns Multimedia: Memo" Height="750" Width="400">
-    <Grid Background="#060417">
+    <Grid Name="gridBase" Background="#060417">
         <StackPanel Name="panelBase" Opacity="0" VerticalAlignment="Top" KeyDown="PanelBase_KeyDown" KeyUp="PanelBase_KeyUp" Focusable="True"/>
     </Grid>
 </Window>
